--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<a name=\"readme-top\"></a>",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "build": "webpack"
@@ -22,12 +22,14 @@
   "homepage": "https://github.com/shegy28/Capstone-project-2#readme",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.3.1",
     "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
     "hint": "^7.1.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -35,9 +37,14 @@
     "stylelint-scss": "^3.21.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6"
   },
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
