--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "<a name=\"readme-top\"></a>",
   "main": "webpack.config.js",
+  "private": true,
   "scripts": {
     "test": "jest",
     "watch": "webpack --watch",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/shegy28/Capstone-project-2#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.3.1",
     "css-loader": "^6.7.3",
@@ -30,6 +32,7 @@
     "hint": "^7.1.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -37,9 +40,7 @@
     "stylelint-scss": "^3.21.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.19.6"
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
