--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "babel-jest": "^29.3.1",
+    "lodash": "^4.17.21",
+    "ts-jest": "^29.0.3"
   },
   "jest": {
     "testEnvironment": "jsdom"
